# chenniX-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  bootstrap.example.yaml  config.example.yaml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
crates/adaptor/: Cargo.toml
crates/adaptor/src/: claude.rs  lib.rs  openai.rs  traits.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: billing.rs  billing_expr.rs  cache.rs  executor.rs  health.rs  lib.rs  normalizer.rs  router.rs  tracker.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  pipeline.rs  state.rs  static_files.rs
crates/server/src/admin/: auth.rs  error.rs  handlers.rs  mod.rs  routes.rs  setup.rs
crates/server/src/middleware/: auth.rs  logging.rs  mod.rs
crates/server/src/routes/: claude.rs  mod.rs  models.rs  openai.rs
crates/server/tests/: scenarios_advanced.rs  scenarios_basic.rs
crates/server/tests/common/: mod.rs
crates/server/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/server/web/src/: App.tsx  index.css
crates/server/web/src/components/: PagePlaceholder.tsx
crates/server/web/src/components/layout/: Layout.tsx  Sidebar.tsx  Topbar.tsx
crates/server/web/src/components/ui/: badge.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  select.tsx  table.tsx  toast.tsx  toaster.tsx
crates/server/web/src/hooks/: use-toast.ts
crates/server/web/src/lib/: api.ts  format.ts
crates/server/web/src/lib/api/: channels.ts  dashboard.ts  logs.ts  models.ts  pricing.ts  setup.ts  tokens.ts  usage.ts  users.ts
crates/server/web/src/pages/: Channels.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Models.tsx  Pricing.tsx  Setup.tsx  Tokens.tsx  Usage.tsx  Users.tsx
crates/server/web/src/stores/: auth.ts
crates/storage/: Cargo.toml
crates/storage/src/: bootstrap.rs  channels.rs  keys.rs  lib.rs  models.rs  schema.rs  tokens.rs  usage.rs  users.rs
crates/translator/: Cargo.toml
crates/translator/src/: c2o.rs  lib.rs  o2c.rs  stream_state.rs
docs/: CODE_WIKI.md
