[package]
name = "chennix-adaptor"
version.workspace = true
edition.workspace = true

[dependencies]
chennix-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
