[package]
name = "chennix-storage"
version.workspace = true
edition.workspace = true

[dependencies]
chennix-common = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
